--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -45,48 +45,54 @@
             android:visibility="gone"
             />
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/show_haut_rhin_btn"
+        <LinearLayout
+            android:id="@+id/fab_buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="144dp"
-            android:layout_marginRight="24dp"
-            android:src="@drawable/fab_68"
-            fab:fab_type="mini"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/accent_pressed"
-            fab:fab_colorRipple="@color/accent_ripple"
-             />
-
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/show_my_location_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="88dp"
-            android:layout_marginRight="24dp"
-            android:src="@drawable/fab_my_location"
-            fab:fab_type="mini"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/accent_pressed"
-            fab:fab_colorRipple="@color/accent_ripple" />
-
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/show_closest_defib_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
-            android:src="@drawable/fab_defib"
-            fab:fab_colorNormal="@color/accent_dark"
-            fab:fab_colorPressed="@color/accent_pressed"
-            fab:fab_colorRipple="@color/accent_ripple"
-            />
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
+            >
+
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/show_haut_rhin_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/fab_68"
+                fab:fab_type="mini"
+                fab:fab_colorNormal="@color/white"
+                fab:fab_colorPressed="@color/accent_pressed"
+                fab:fab_colorRipple="@color/accent_ripple"
+                 />
+
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/show_my_location_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/fab_my_location"
+                fab:fab_type="mini"
+                fab:fab_colorNormal="@color/white"
+                fab:fab_colorPressed="@color/accent_pressed"
+                fab:fab_colorRipple="@color/accent_ripple" />
+
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/show_closest_defib_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/fab_defib"
+                fab:fab_colorNormal="@color/accent_dark"
+                fab:fab_colorPressed="@color/accent_pressed"
+                fab:fab_colorRipple="@color/accent_ripple"
+                />
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
