--- a/app/src/main/res/layout/drawer_content.xml
+++ b/app/src/main/res/layout/drawer_content.xml
@@ -5,60 +5,86 @@
     android:layout_width="@dimen/drawerWidth"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@color/drawer_bkg" >
+    android:background="@color/drawer_bkg"
+    android:layout_weight="1"
+    android:fillViewport="true">
 
-    <LinearLayout android:id="@+id/left_drawer_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="start"
-        >
-
-        <ImageView
+        <LinearLayout android:id="@+id/left_drawer_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/bkg_drawer"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:layout_marginBottom="8dp"
-            />
+            android:orientation="vertical"
+            android:layout_gravity="start"
+            >
 
-        <Button
-            android:id="@+id/map_type_chooser_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/DrawerButton.Activable"
-            android:text="@string/satellite"
-            android:drawableLeft="@drawable/ic_satellite_grey600_24dp"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="1">
 
-        <View style="@style/Divider"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/bkg_drawer"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:layout_marginBottom="8dp"
+                    />
 
-        <!--
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/DrawerButton"
-            android:text="@string/settings"
-            android:drawableLeft="@drawable/ic_settings_grey600_24dp"
-            />
-        -->
-        <Button
-            android:id="@+id/contact_us_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/DrawerButton"
-            android:text="@string/contact_us"
-            android:drawableLeft="@drawable/ic_email_grey600_24dp"
-            />
-        <Button
-            android:id="@+id/about_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/DrawerButton"
-            android:text="@string/about"
-            android:drawableLeft="@drawable/ic_info_grey600_24dp"
-            />
+                <Button
+                    android:id="@+id/map_type_chooser_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/DrawerButton.Activable"
+                    android:text="@string/satellite"
+                    android:drawableLeft="@drawable/ic_satellite_grey600_24dp"
+                    />
 
-    </LinearLayout>
+                <View style="@style/Divider"/>
+
+                <!--
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/DrawerButton"
+                    android:text="@string/settings"
+                    android:drawableLeft="@drawable/ic_settings_grey600_24dp"
+                    />
+                -->
+                <Button
+                    android:id="@+id/contact_us_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/DrawerButton"
+                    android:text="@string/contact_us"
+                    android:drawableLeft="@drawable/ic_email_grey600_24dp"
+                    />
+
+                <Button
+                    android:id="@+id/rate_app_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/DrawerButton"
+                    android:text="@string/rate_app"
+                    android:drawableLeft="@drawable/ic_star_grey600_24dp"
+                    />
+
+                <Button
+                    android:id="@+id/about_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/DrawerButton"
+                    android:text="@string/about"
+                    android:drawableLeft="@drawable/ic_info_grey600_24dp"
+                    />
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:textColor="@color/primary"
+                android:text="@string/app_name"/>
+        </LinearLayout>
 </ScrollView>
