--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="drawerWidth">304dp</dimen>
+
     <!-- For API < 19 no need to push down the content as we don't draw behind the status bar -->
     <dimen name="top_margin_status_bar">0dp</dimen>
     <dimen name="top_margin_btn_drawer">16dp</dimen>
