--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -24,77 +24,122 @@
         />
 
     <!-- Use margins on the last button to avoid shadow cliping -->
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/fab_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="bottom|end"
-        android:gravity="center"
         >
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/show_haut_rhin_btn"
+
+        <RelativeLayout
+            android:id="@+id/show_haut_rhin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/fab_68"
-            fab:fab_type="mini"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/accent_pressed"
-            fab:fab_colorRipple="@color/accent_ripple"
-             />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            >
+
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/show_haut_rhin_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="24dp"
+                android:src="@drawable/fab_68"
+                fab:fab_type="mini"
+                fab:fab_colorNormal="@color/white"
+                fab:fab_colorPressed="@color/accent_pressed"
+                fab:fab_colorRipple="@color/accent_ripple"
+                 />
+
+            <LinearLayout
+                android:id="@+id/tip_show_haut_rhin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                style="@style/Tip"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/show_haut_rhin_btn"
+                android:layout_toStartOf="@id/show_haut_rhin_btn" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TipNumber"
+                    android:text="2/2" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TipText"
+                    android:text="@string/tip_haut_rhin"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
 
         <com.melnykov.fab.FloatingActionButton
             android:id="@+id/show_my_location_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_below="@id/show_haut_rhin"
             android:src="@drawable/fab_my_location"
             fab:fab_type="mini"
             fab:fab_colorNormal="@color/white"
             fab:fab_colorPressed="@color/accent_pressed"
             fab:fab_colorRipple="@color/accent_ripple" />
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/show_closest_defib_btn"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:src="@drawable/fab_defib"
-            fab:fab_colorNormal="@color/accent_dark"
-            fab:fab_colorPressed="@color/accent_pressed"
-            fab:fab_colorRipple="@color/accent_ripple"
-        />
-    </LinearLayout>
+            android:layout_below="@id/show_my_location_btn"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
 
-        <!--
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/show_closest_defib_btn"
-            android:layout_toStartOf="@id/show_closest_defib_btn"
-            android:layout_alignTop="@id/show_closest_defib_btn"
-            android:drawableLeft="@drawable/ic_info_outline_grey600_24dp"
-            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
-            android:drawablePadding="5dp"
-            android:paddingRight="0dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:elevation="10dp"
-            android:gravity="center_vertical|right"
-            android:background="@drawable/bubble"
-            android:textColor="@color/white"
-            android:text="Quickly find the closest defibrillator oiwe fo oiewn f"
-            fontPath="fonts/Roboto-Bold.ttf"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:visibility="gone"/>
-    -->
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/show_closest_defib_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/fab_defib"
+                fab:fab_colorNormal="@color/accent_dark"
+                fab:fab_colorPressed="@color/accent_pressed"
+                fab:fab_colorRipple="@color/accent_ripple"
+                />
+
+            <LinearLayout
+                android:id="@+id/tip_show_closest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                style="@style/Tip"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/show_closest_defib_btn"
+                android:layout_toStartOf="@id/show_closest_defib_btn" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TipNumber"
+                    android:text="1/2" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TipText"
+                    android:text="@string/tip_closest_defib"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 </FrameLayout>
