--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,32 @@
         <item name="android:textColor">@color/btn_drawer_activable_textcolor_selector</item>
     </style>
 
+    <style name="Tip">
+        <item name="android:visibility">gone</item>
+        <item name="android:background">@drawable/bkg_tip</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="TipNumber">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:background">@drawable/bkg_tip_number</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="TipText">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontPath">fonts/Roboto-Bold.ttf</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
 </resources>
