--- a/app/src/main/res/layout/drawer_content.xml
+++ b/app/src/main/res/layout/drawer_content.xml
@@ -29,6 +29,7 @@
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:layout_marginBottom="8dp"
+                    android:contentDescription="@string/app_name"
                     />
 
                 <Button
